feat: added animations

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,3 +18,19 @@ body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
 }
+
+/* ANIMATIONS */
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 250ms ease-in forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
