chore: added progress bar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,25 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+.progress-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background: white;
+  transform-origin: 0%;
+  z-index: 1000;
 }
 
 /* ANIMATIONS */
