--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -109,3 +109,12 @@ body::-webkit-scrollbar {
     transform: translateX(0px);
   }
 }
+
+.LazyLoad {
+  opacity: 0;
+  transition: all 250ms ease-in-out;
+}
+
+.is-visible {
+  opacity: 1;
+}
