feat: reviews tab

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  @variants responsive {
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+  }
+}
+
 :root {
   --foreground-rgb: 229, 229, 229;
   --background-rgb: 10, 10, 10;
